--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -8,32 +8,8 @@
 </head>
 <body>
 <div id="some" class="some hidden">&nbsp;</div>
+<div id="some2" class="some2 hidden">&nbsp;</div>
 <script src="/socket.io/socket.io.js"></script>
-<script>
-    window.onload = function() {
-        var socket = io();
-        var some = document.getElementById('some');
-
-        some.onclick = function(e) {
-            socket.emit('click');
-        };
-
-        socket.on('show', function(msg) {
-            some.classList.remove('hidden');
-            some.classList.remove('hide');
-            console.log('show');
-        });
-
-        socket.on('hide', function(msg) {
-            some.classList.add('hide');
-            console.log('hide');
-        });
-
-        socket.on('count', function(msg) {
-            console.log('count', msg);
-        });
-    };
-</script>
-<script></script>
+<script src="./js.js"></script>
 </body>
 </html>
